# aia_b2b_dev_agent

./: .gitignore  architect_design.txt  epics_stories_creation.txt  prd_design.txt  story_implementation.txt
_bmad-output/: project-state.md
_bmad-output/implementation-artifacts/: 1-1-set-up-bi-layer-project-structure.md  deferred-work.md  epic-1-context.md  epic-2-context.md  epic-3-context.md  epic-4-context.md  epic-5-context.md  governance-log.md  spec-1-2-validate-netscout-bigquery-schema.md  spec-1-3-request-datahub-access-for-source-data.md  spec-1-4-create-bigquery-dataset-and-core-table-definitions.md  spec-2-1-build-kpi-refresh-stored-procedure.md  spec-2-2-build-composite-quality-score-stored-procedure.md  (+8 more)
docs/: schema-mapping.md
images/roaming-intelligence/: Dockerfile  pyproject.toml  review.txt
images/roaming-intelligence/src/: __init__.py  bq_client.py  config.py  gcs_upload.py  main.py
images/roaming-intelligence/src/report/: __init__.py  builder.py  charts.py
images/roaming-intelligence/src/report/sections/: __init__.py  carrier_rankings.py  country_overview.py  data_quality.py  executive_summary.py  trend_charts.py  usage_analytics.py
images/roaming-intelligence/templates/: base.html.j2  section.html.j2
images/roaming-intelligence/tests/: __init__.py  test_bq_client.py  test_builder.py  test_config.py
images/roaming-intelligence/tests/fixtures/: sample_data.py
images/roaming-intelligence/tests/test_sections/: __init__.py  test_carrier_rankings.py  test_country_overview.py  test_executive_summary.py  test_trend_charts.py
(+58 files in other folders)
