[project]
name = "roaming-intelligence-report"
version = "0.1.0"
description = "Daily roaming intelligence HTML report generator"
requires-python = ">=3.12"
dependencies = [
    "plotly>=5.22.0",
    "jinja2>=3.1.4",
    "google-cloud-bigquery[pandas]>=3.25.0",
    "google-cloud-storage>=2.18.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
